--- a/bib.bib
+++ b/bib.bib
@@ -14,6 +14,46 @@
  year = {1979}
 }
 
+@article{1990ARA&A..28..215D,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1990ARA&A..28..215D},
+ author = {{Dickey}, John M. and {Lockman}, Felix J.},
+ doi = {10.1146/annurev.aa.28.090190.001243},
+ journal = {\araa},
+ keywords = {H I Regions, Milky Way Galaxy, Absorption Spectra, Lyman Alpha Radiation, Molecular Clouds, Radio Emission, Ultraviolet Astronomy, Very Long Base Interferometry, Astrophysics},
+ month = {January},
+ pages = {215-261},
+ title = {{H I in the galaxy.}},
+ volume = {28},
+ year = {1990}
+}
+
+@article{1993A&A...278..449J,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1993A&A...278..449J},
+ author = {{Jetsu}, L. and {Pelt}, J. and {Tuominen}, I.},
+ journal = {\aap},
+ keywords = {H Alpha Line, Starspots, Stellar Flares, Stellar Models, Stellar Rotation, Ultraviolet Emission, Variable Stars, Absorption Spectra, Angular Momentum, Brightness, Light Curve, Radial Velocity, Ultraviolet Photometry, Astrophysics},
+ month = {November},
+ pages = {449-462},
+ title = {{SPOT and flare activity of FK Comae Berenices : long-term photometry.}},
+ volume = {278},
+ year = {1993}
+}
+
+@article{1996A&A...307..200J,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1996A&A...307..200J},
+ author = {{Jasniewicz}, G. and {Thevenin}, F. and {Monier}, R. and {Skiff}, B.~A.},
+ journal = {\aap},
+ keywords = {PLANETARY NEBULAE: LOTR5, STARS: CLOSE BINARIES, STARS: CHROMOSPHERE, STARS: HD 112313},
+ month = {March},
+ pages = {200},
+ title = {{The central star of LoTr5 revisited.}},
+ volume = {307},
+ year = {1996}
+}
+
 @article{2002ApJ...576L.149R,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...576L.149R},
@@ -30,6 +70,21 @@
  title = {{The X-Ray Luminosities of Herbig-Haro Objects}},
  volume = {576},
  year = {2002}
+}
+
+@article{2005A&A...444..531G,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2005A&A...444..531G},
+ author = {{Gondoin}, P.},
+ doi = {10.1051/0004-6361:20053567},
+ journal = {\aap},
+ keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars, stars: magnetic fields},
+ month = {December},
+ number = {2},
+ pages = {531-538},
+ title = {{The relation between X-ray activity and rotation in intermediate-mass G giants}},
+ volume = {444},
+ year = {2005}
 }
 
 @article{2006AJ....131.1163S,
@@ -61,6 +116,21 @@
  title = {{CIAO: Chandra's data analysis system}},
  volume = {6270},
  year = {2006}
+}
+
+@article{2007A&A...464.1101G,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2007A&A...464.1101G},
+ author = {{Gondoin}, P.},
+ doi = {10.1051/0004-6361:20066751},
+ journal = {\aap},
+ keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars},
+ month = {March},
+ number = {3},
+ pages = {1101-1106},
+ title = {{The rotation-activity correlation among G and K giants in binary systems}},
+ volume = {464},
+ year = {2007}
 }
 
 @article{2007A&A...466.1111G,
@@ -97,6 +167,24 @@
  year = {2007}
 }
 
+@article{2008A&A...488L..13S,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2008A&A...488L..13S},
+ archiveprefix = {arXiv},
+ author = {{Schneider}, P.~C. and {Schmitt}, J.~H.~M.~M.},
+ doi = {10.1051/0004-6361:200810261},
+ eprint = {0807.2156},
+ journal = {\aap},
+ keywords = {stars: individual: DG Tauri, stars: winds, outflows, X-rays: stars, stars: pre-main sequence, Astrophysics},
+ month = {September},
+ number = {2},
+ pages = {L13-L16},
+ primaryclass = {astro-ph},
+ title = {{The nature of the soft X-ray source in DG Tauri}},
+ volume = {488},
+ year = {2008}
+}
+
 @article{2010ApJ...708.1760G,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...708.1760G},
@@ -112,6 +200,42 @@
  primaryclass = {astro-ph.SR},
  title = {{Methods for Estimating Fluxes and Absorptions of Faint X-ray Sources}},
  volume = {708},
+ year = {2010}
+}
+
+@article{2010ApJ...719L..65K,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...719L..65K},
+ archiveprefix = {arXiv},
+ author = {{Kastner}, Joel H. and {Montez}, Rodolfo, Jr. and {Rodriguez}, David and {Grosso}, Nicolas and {Zuckerman}, B. and {Perrin}, Marshall D. and {Forveille}, Thierry and {Graham}, James R.},
+ doi = {10.1088/2041-8205/719/1/L65},
+ eprint = {1007.3981},
+ journal = {\apjl},
+ keywords = {circumstellar matter, stars: individual: BP Psc, stars: late-type, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+ month = {August},
+ number = {1},
+ pages = {L65-L68},
+ primaryclass = {astro-ph.SR},
+ title = {{Chandra X-ray Detection of the Enigmatic Field Star BP Psc}},
+ volume = {719},
+ year = {2010}
+}
+
+@article{2010ApJ...721.1820M,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...721.1820M},
+ archiveprefix = {arXiv},
+ author = {{Montez}, Rodolfo, Jr. and {De Marco}, Orsola and {Kastner}, Joel H. and {Chu}, You-Hua},
+ doi = {10.1088/0004-637X/721/2/1820},
+ eprint = {1008.2910},
+ journal = {\apj},
+ keywords = {binaries: close, planetary nebulae: individual: PN Lotr 5 PN HFG 1 PN DS 1, stars: coronae, X-rays: general, Astrophysics - Solar and Stellar Astrophysics},
+ month = {October},
+ number = {2},
+ pages = {1820-1828},
+ primaryclass = {astro-ph.SR},
+ title = {{X-ray Emission from the Binary Central Stars of the Planetary Nebulae HFG 1, DS 1, and LoTr 5}},
+ volume = {721},
  year = {2010}
 }
 
@@ -167,6 +291,25 @@
  year = {2013}
 }
 
+@article{2014ApJ...795...51G,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...795...51G},
+ archiveprefix = {arXiv},
+ author = {{G{\"u}nther}, Hans Moritz and {Li}, Zhi-Yun and {Schneider}, P.~C.},
+ doi = {10.1088/0004-637X/795/1/51},
+ eid = {51},
+ eprint = {1409.0787},
+ journal = {\apj},
+ keywords = {ISM: jets and outflows, shock waves, stars: formation, stars: individual: DG Tau, stars: mass-loss, stars: pre-main sequence, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics},
+ month = {November},
+ number = {1},
+ pages = {51},
+ primaryclass = {astro-ph.SR},
+ title = {{Recollimation Boundary Layers as X-Ray Sources in Young Stellar Jets}},
+ volume = {795},
+ year = {2014}
+}
+
 @article{2016A&A...595A...1G,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...595A...1G},
@@ -183,6 +326,43 @@
  title = {{The Gaia mission}},
  volume = {595},
  year = {2016}
+}
+
+@article{2016ApJS..223....5A,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJS..223....5A},
+ archiveprefix = {arXiv},
+ author = {{Ayres}, Thomas R. and {Kashyap}, V. and {Saar}, S. and {Huenemoerder}, D. and {Korhonen}, H. and {Drake}, J.~J. and {Testa}, P. and {Cohen}, O. and {Garraffo}, C. and {Granzer}, T. and {Strassmeier}, K.},
+ doi = {10.3847/0067-0049/223/1/5},
+ eid = {5},
+ eprint = {1601.03305},
+ journal = {\apjs},
+ keywords = {stars: coronae, stars: individual: HD 117555 \& FK Com, ultraviolet: stars, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+ month = {March},
+ number = {1},
+ pages = {5},
+ primaryclass = {astro-ph.SR},
+ title = {{FK Comae Berenices, King of Spin: The COCOA-PUFS Project}},
+ volume = {223},
+ year = {2016}
+}
+
+@article{2018A&A...615A.124U,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2018A&A...615A.124U},
+ archiveprefix = {arXiv},
+ author = {{Ustamujic}, S. and {Orlando}, S. and {Bonito}, R. and {Miceli}, M. and {G{\'o}mez de Castro}, A.~I.},
+ doi = {10.1051/0004-6361/201732391},
+ eid = {A124},
+ eprint = {1803.05964},
+ journal = {\aap},
+ keywords = {ISM: jets and outflows, magnetohydrodynamics (MHD), X-rays: ISM, stars: pre-main sequence, ISM: individual objects: HH 154, stars: individual: DG Tau, Astrophysics - Solar and Stellar Astrophysics},
+ month = {July},
+ pages = {A124},
+ primaryclass = {astro-ph.SR},
+ title = {{Structure of X-ray emitting jets close to the launching site: from embedded to disk-bearing sources}},
+ volume = {615},
+ year = {2018}
 }
 
 @article{2018A&A...616A...1G,
@@ -220,6 +400,42 @@
  title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
  volume = {156},
  year = {2018}
+}
+
+@article{2019A&A...624A..83K,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...624A..83K},
+ archiveprefix = {arXiv},
+ author = {{K{\H{o}}v{\'a}ri}, Zs. and {Strassmeier}, K.~G. and {Ol{\'a}h}, K. and {Kriskovics}, L. and {Vida}, K. and {Carroll}, T.~A. and {Granzer}, T. and {Ilyin}, I. and {Jurcsik}, J. and {K{\H{o}}v{\'a}ri}, E. and {Weber}, M.},
+ doi = {10.1051/0004-6361/201834810},
+ eid = {A83},
+ eprint = {1902.09460},
+ journal = {\aap},
+ keywords = {stars: activity, stars: imaging, stars: late-type, stars: individual: IN Com, starspots, Astrophysics - Solar and Stellar Astrophysics},
+ month = {April},
+ pages = {A83},
+ primaryclass = {astro-ph.SR},
+ title = {{Surface magnetic activity of the fast-rotating G5 giant IN Comae, central star of the faint planetary nebula LoTr 5}},
+ volume = {624},
+ year = {2019}
+}
+
+@article{2019MNRAS.490.3158C,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.490.3158C},
+ archiveprefix = {arXiv},
+ author = {{Cruzal{\`e}bes}, P. and {Petrov}, R.~G. and {Robbe-Dubois}, S. and {Varga}, J. and {Burtscher}, L. and {Allouche}, F. and {Berio}, P. and {Hofmann}, K. -H. and {Hron}, J. and {Jaffe}, W. and {Lagarde}, S. and {Lopez}, B. and {Matter}, A. and {Meilland}, A. and {Meisenheimer}, K. and {Millour}, F. and {Schertl}, D.},
+ doi = {10.1093/mnras/stz2803},
+ eprint = {1910.00542},
+ journal = {\mnras},
+ keywords = {techniques: interferometric, techniques: photometric, catalogues, stars: fundamental parameters, infrared: stars, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {December},
+ number = {3},
+ pages = {3158-3176},
+ primaryclass = {astro-ph.SR},
+ title = {{A catalogue of stellar diameters and fluxes for mid-infrared interferometry}},
+ volume = {490},
+ year = {2019}
 }
 
 @article{2020Natur.587..387H,
@@ -416,6 +632,24 @@ Todd},
  year = {2003}
 }
 
+@article{Preibisch+2005,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJS..160..390P},
+ archiveprefix = {arXiv},
+ author = {{Preibisch}, Thomas and {Feigelson}, Eric D.},
+ doi = {10.1086/432094},
+ eprint = {astro-ph/0506052},
+ journal = {\apjs},
+ keywords = {Galaxy: Open Clusters and Associations: Individual: Name: Orion Nebula Cluster, Stars: Activity, Stars: Low-Mass, Brown Dwarfs, Stars: Pre-Main-Sequence, X-Rays: Stars, Astrophysics},
+ month = {October},
+ number = {2},
+ pages = {390-400},
+ primaryclass = {astro-ph},
+ title = {{The Evolution of X-Ray Emission in Young Stars}},
+ volume = {160},
+ year = {2005}
+}
+
 @article{Raghavan+2010,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJS..190....1R},
@@ -547,6 +781,25 @@ Todd},
  publisher = {AIP Publishing},
  title = {The NumPy array: a structure for efficient numerical computation},
  volume = {13},
+ year = {2011}
+}
+
+@article{Wright+2011,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJ...743...48W},
+ archiveprefix = {arXiv},
+ author = {{Wright}, Nicholas J. and {Drake}, Jeremy J. and {Mamajek}, Eric E. and {Henry}, Gregory W.},
+ doi = {10.1088/0004-637X/743/1/48},
+ eid = {48},
+ eprint = {1109.4634},
+ journal = {\apj},
+ keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, stars: magnetic field, stars: rotation, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+ month = {December},
+ number = {1},
+ pages = {48},
+ primaryclass = {astro-ph.SR},
+ title = {{The Stellar-activity-Rotation Relationship and the Evolution of Stellar Dynamos}},
+ volume = {743},
  year = {2011}
 }
 
