Updates from Overleaf

--- a/TYCxray.tex
+++ b/TYCxray.tex
@@ -505,7 +505,7 @@ Thus, taking $L_{\rm bol} = 100L_{\odot}$ for TYC and ${\rm Ro} = 4$, we find th
     \label{fig:lxbol}}
 \end{figure}
 
-Figure~\ref{fig:lxbol} compares the activity level in the form $\log(L-\mathrm{X}/L_\mathrm{bol})$ to a sample of dwarf stars from \citet{Wright+2011}. This sample includes pre-main sequence stars, young active stars, and older main-sequence stars. The activity level increases with faster rotation and saturates around $\log(L-\mathrm{X}/L_\mathrm{bol})=-3$. Pre-main sequence stars and young stars are generally found in the saturated regime, while the activity, and thus the X-ray luminosity, declines over time on the main-sequence as stars loos angular momentum and spin down. The relation is tighter when the activity level is compared to the Rossby number (Figure~\ref{fig:lxbol}, right), but that requires knowledge of the internal structure, so Figure~\ref{fig:lxbol} includes a plot based on observed quantities (left) as well. A sample of single giant stars is taken from \citet{2005A&A...444..531G} and giants that are part of binary systems from \citet{2007A&A...464.1101G}.
+Figure~\ref{fig:lxbol} compares the activity level in the form $\log(L-\mathrm{X}/L_\mathrm{bol})$ to a sample of dwarf stars from \citet{Wright+2011}. This sample includes pre-main sequence stars, young active stars, and older main-sequence stars. The activity level increases with faster rotation and saturates around $\log(L-\mathrm{X}/L_\mathrm{bol})=-3$. Pre-main sequence stars and young stars are generally found in the saturated regime, while the activity, and thus the X-ray luminosity, declines over time on the main-sequence as stars loos angular momentum and spin down. The relation is tighter when the activity level is compared to the Rossby number (Figure~\ref{fig:lxbol}, right), but that requires knowledge of the internal structure, so Figure~\ref{fig:lxbol} includes a plot based on observed quantities (left) as well. A sample of single giant stars is taken from \citet{Gondoin+2007} and giants that are part of binary systems from \citet{2007A&A...464.1101G}.
 
 
 
@@ -513,8 +513,8 @@ We use the period detected in the RV curves and in the TESS lightcurve to place 
 
 For comparison, we include \object{FK Com}, the prototype of the FK Comae Berenices (FK Com) class of variable stars. FK~Com shows a periodic lightcurve with a period of $P=2.4$~d \citep{1993A&A...278..449J}, and a number of other activity indicators, such hot Si~{\sc iv} and cromospheric Ca~{\sc ii} and C~{\sc ii} emission lines as well as persistent and flaring X-ray activity \citep{2016ApJS..223....5A}. Fk~Com stars are thought to be the result of recent close-binary mergers, that caused the remaining star to spin up and thus triggers a dynamo and coronal activity. Unlike our target TYC 2597-735-1 though, FK~Com stars are point sources and no BRN has been seen yet.
 
-\object{BP Psc} is another giant, suspected to be the result of a recent merger. Unlike the FK~Com stars, BP~Psc does have circumstellar material, including a disk and a bright jet \citep{2008ApJ...683.1085Z}.
-\citet{2010ApJ...719L..65K} observed $\log(L-\mathrm{X}/L_\mathrm{bol})$ between -5.8 and -4.2; the absorbing column density is very high, leaving the amount of soft X-ray emission unconstrained. Until recently, if was unclear if BP~Psc is a close-by young star, or an evolved giant, but GAIA data has resolved this controversy. With the new distance and spectral type, \citet{2019MNRAS.490.3158C} estimate a radius of $6.4\R_\sun{}$. Assuming that the stellar rotation axis is aligned with the symmetry axis of the disk ($i=75\pm10$ degree), we can convert the rotational broadening of $v \sin i=38$~km~s$^{-1}$ \citet{2008ApJ...683.1085Z} into a period of 8.2~d and place BP~Psc in Fig.~\ref{fig:lxbol}.
+\object{BP Psc} is another giant, suspected to be the result of a recent merger. Unlike the FK~Com stars, BP~Psc does have circumstellar material, including a disk and a bright jet \citep{Zuckerman+2008}.
+\citet{2010ApJ...719L..65K} observed $\log(L-\mathrm{X}/L_\mathrm{bol})$ between -5.8 and -4.2; the absorbing column density is very high, leaving the amount of soft X-ray emission unconstrained. Until recently, if was unclear if BP~Psc is a close-by young star, or an evolved giant, but GAIA data has resolved this controversy. With the new distance and spectral type, \citet{2019MNRAS.490.3158C} estimate a radius of $6.4\R_\sun{}$. Assuming that the stellar rotation axis is aligned with the symmetry axis of the disk ($i=75\pm10$ degree), we can convert the rotational broadening of $v \sin i=38$~km~s$^{-1}$ \citet{Zuckerman+2008} into a period of 8.2~d and place BP~Psc in Fig.~\ref{fig:lxbol}.
 
 Furthermore, we look at three central objects in planetary nebula (PN). These objects may originate from a similar evolutionary path that FK~Com systems. We interpret FK Com systems as remnants of a stellar merger that happened during a common envelope phase, while in the PN LoTr~5, the central binary could have survived the common envelope phase, with some mass transfer between the components \citep{1996A&A...307..200J}.
 X-ray data and luminosities for central objects of PN are taken from \citet{2010ApJ...721.1820M}. The central objects of \object{HFG 1} and \object{DS 1} are members of close binary systems, we show them in Figure~\ref{fig:lxbol} assuming that their rotation period matches their orbital period. Both objects are rapid rotators and and show other signs of magnetic activity as well; DS~1 may have undergone a flare during the observation, which might explain why its observed $\log(L-\mathrm{X}/L_\mathrm{bol})$ is brigther than the saturation limit \citep{2010ApJ...721.1820M}. The central object of \object{LoTr 5} has been repeatedly observed with Doppler-imaging \citep{2019A&A...624A..83K}, so the period is well known. The objects displays both cool and warm spots. Warm spots live longer (three months) and are located on average at higher latitudes than cool spots; the surface flow has an anti-solar differential rotation.
