--- a/bib.bib
+++ b/bib.bib
@@ -72,7 +72,7 @@
  year = {2002}
 }
 
-@article{2005A&A...444..531G,
+@article{Gondoin+2005,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2005A&A...444..531G},
  author = {{Gondoin}, P.},
