Updates from Overleaf

--- a/bib.bib
+++ b/bib.bib
@@ -14,6 +14,43 @@
  year = {1979}
 }
 
+@ARTICLE{1996ApJ...468..797L,
+       author = {{Lombardi}, James C., Jr. and {Rasio}, Frederic A. and {Shapiro}, Stuart L.},
+        title = "{Collisions of Main-Sequence Stars and the Formation of Blue Stragglers in Globular Clusters}",
+      journal = {\apj},
+     keywords = {STARS: BLUE STRAGGLERS, HYDRODYNAMICS, STARS: EVOLUTION, STARS: INTERIORS, STARS: ROTATION, Astrophysics},
+         year = 1996,
+        month = sep,
+       volume = {468},
+        pages = {797},
+          doi = {10.1086/177736},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9511074},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...468..797L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016MNRAS.461.2527P,
+       author = {{Pejcha}, Ond{\v{r}}ej and {Metzger}, Brian D. and {Tomida}, Kengo},
+        title = "{Binary stellar mergers with marginally bound ejecta: excretion discs, inflated envelopes, outflows, and their luminous transients}",
+      journal = {\mnras},
+     keywords = {binaries: close, binaries: general, stars: evolution, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2016,
+        month = sep,
+       volume = {461},
+       number = {3},
+        pages = {2527-2539},
+          doi = {10.1093/mnras/stw1481},
+archivePrefix = {arXiv},
+       eprint = {1604.07414},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.461.2527P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{1990ARA&A..28..215D,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/1990ARA&A..28..215D},
@@ -118,7 +155,7 @@
  year = {2006}
 }
 
-@article{2007A&A...464.1101G,
+@article{Gondoin+2007,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2007A&A...464.1101G},
  author = {{Gondoin}, P.},
