--- a/mesatable.tex
+++ b/mesatable.tex
@@ -6,26 +6,25 @@
 % 2000           4.24e10                         5.59e5                                0.877
 % 5000           7.63e10                         3.41e5                                2.589
 
-\begin{deluxetable}{l c c c c}\tablenum{1}
+\begin{deluxetable}{l c c c c c c}\tablenum{1}
 %\tabletypesize{\footnotesize}
 \tablecaption{Surface Convection Zone Properties of TYC 2597-735-1 Best-fit \texttt{MESA} Evolutionary Model 
 	\label{tab:mesa}}
 \tablewidth{0pt}
-\tablecolumns{5}
+\tablecolumns{7}
 \tablehead{
-	\colhead{Time} & \colhead{$r_{\rm conv}$} & \colhead{$v_{\rm conv, max}$} & \colhead{$r_{\rm conv}/v_{\rm conv, max}$} & \colhead{{\bf Ro}} \\
-	        {(years)}         & {(10$^{10}$ cm)}           & {(10$^{6}$ cm/s)}        & {(days)} &  
+	\colhead{Time} & \colhead{$R_{\star}$} & \colhead{$r_{\rm conv}$} & \colhead{$v_{\rm conv, max}$} & \colhead{$r_{\rm conv}/v_{\rm conv, max}$} & \colhead{{\bf Ro}} & \colhead{${\rm C_X}$ } \\
+	 {(years)}     &    {($R_{\odot}$)}    & {(10$^{10}$ cm)}           & {(10$^{6}$ cm/s)}        & {(days)} &   &
 }
 \startdata
 %
-	100  & 0.774 & 1.33 & 0.0673 & $\sim$205  \\
-	200  & 0.534 & 1.23 & 0.0503 & $\sim$275  \\
-	500  & 0.581 & 1.05 & 0.0642 & $\sim$215  \\
-	1000 & 2.12 & 0.785 & 0.312  & $\sim$45   \\
-	2000 & 4.24 & 0.559 & 0.877  & 15.68      \\
-	5000 & 7.63 & 0.341 & 2.589  & 5.31       \\
+	100  & 14.9 & 0.774 & 1.33 & 0.0673 & 453.6 & - \\
+	200  & 12.9 & 0.534 & 1.23 & 0.0503 & 454.9 & - \\
+	500  & 11.0 & 0.581 & 1.05 & 0.0642 & 259.2 & - \\
+	1000 & 9.9  & 2.12 & 0.785 & 0.312  & 43.2  & - \\
+	2000 & 8.8  & 4.24 & 0.559 & 0.877  & 12.1  & 1.1E-3 \\
+	5000 & 7.4  & 7.63 & 0.341 & 2.589  & 2.9   & 6.0E-5 \\
 \enddata
-%
-% \tablenotetext{a}{~(1) \citet{Akeson+02}; (2) \citet{Andrews+Williams+07}; (3) \citet{Andrews+11}; (4) \citet{Bouvier+90}; (5) \citet{Espaillat+07a}; (6) \citet{Espaillat+11}; (7) \citet{France+12b}; (8) \citet{Furlan+11}; (9) \citet{Gullbring+98}; (10) \citet{Hartmann+Soberblom+Stauffer+87}; (11) \citet{Hartmann+Stauffer+89}; (12) \citet{Hartmann+98}; (13) \citet{Herczeg+Hillenbrand+08}; (14) \citet{Ingleby+11}; (15) \citet{Ingleby+13}; (16) \citet{Johns-Krull+Valenti+01}; (17) \citet{Kenyon+94}; (18) \citet{Kraus+Hillenbrand+09}; (19) \citet{Lawson+96}; (20) \citet{Lawson+01}; (21) \citet{Lawson+04}; (22) \citet{Luhman+04}; (23) \citet{McJunkin+13}; (24) \citet{Pontoppidan+08}; (25) \citet{Quast+00}; (26) \citet{Ricci+10}; (27) \citet{Rodriguez+10}; (28) \citet{Rosenfeld+12}; (29) \citet{Rosenfeld+13}; (30) \citet{Simon+00}; (31) \citet{Webb+99}; (32) \citet{Woitke+13}. }
-%
+
+
 \end{deluxetable}
