--- a/bib.bib
+++ b/bib.bib
@@ -14,43 +14,6 @@
  year = {1979}
 }
 
-@ARTICLE{1996ApJ...468..797L,
-       author = {{Lombardi}, James C., Jr. and {Rasio}, Frederic A. and {Shapiro}, Stuart L.},
-        title = "{Collisions of Main-Sequence Stars and the Formation of Blue Stragglers in Globular Clusters}",
-      journal = {\apj},
-     keywords = {STARS: BLUE STRAGGLERS, HYDRODYNAMICS, STARS: EVOLUTION, STARS: INTERIORS, STARS: ROTATION, Astrophysics},
-         year = 1996,
-        month = sep,
-       volume = {468},
-        pages = {797},
-          doi = {10.1086/177736},
-archivePrefix = {arXiv},
-       eprint = {astro-ph/9511074},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...468..797L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2016MNRAS.461.2527P,
-       author = {{Pejcha}, Ond{\v{r}}ej and {Metzger}, Brian D. and {Tomida}, Kengo},
-        title = "{Binary stellar mergers with marginally bound ejecta: excretion discs, inflated envelopes, outflows, and their luminous transients}",
-      journal = {\mnras},
-     keywords = {binaries: close, binaries: general, stars: evolution, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
-         year = 2016,
-        month = sep,
-       volume = {461},
-       number = {3},
-        pages = {2527-2539},
-          doi = {10.1093/mnras/stw1481},
-archivePrefix = {arXiv},
-       eprint = {1604.07414},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.461.2527P},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-
 @article{1990ARA&A..28..215D,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/1990ARA&A..28..215D},
@@ -91,6 +54,23 @@ archivePrefix = {arXiv},
  year = {1996}
 }
 
+@article{1996ApJ...468..797L,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...468..797L},
+ archiveprefix = {arXiv},
+ author = {{Lombardi}, James C., Jr. and {Rasio}, Frederic A. and {Shapiro}, Stuart L.},
+ doi = {10.1086/177736},
+ eprint = {astro-ph/9511074},
+ journal = {\apj},
+ keywords = {STARS: BLUE STRAGGLERS, HYDRODYNAMICS, STARS: EVOLUTION, STARS: INTERIORS, STARS: ROTATION, Astrophysics},
+ month = {September},
+ pages = {797},
+ primaryclass = {astro-ph},
+ title = {{Collisions of Main-Sequence Stars and the Formation of Blue Stragglers in Globular Clusters}},
+ volume = {468},
+ year = {1996}
+}
+
 @article{2002ApJ...576L.149R,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...576L.149R},
@@ -107,21 +87,6 @@ archivePrefix = {arXiv},
  title = {{The X-Ray Luminosities of Herbig-Haro Objects}},
  volume = {576},
  year = {2002}
-}
-
-@article{Gondoin+2005,
- adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2005A&A...444..531G},
- author = {{Gondoin}, P.},
- doi = {10.1051/0004-6361:20053567},
- journal = {\aap},
- keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars, stars: magnetic fields},
- month = {December},
- number = {2},
- pages = {531-538},
- title = {{The relation between X-ray activity and rotation in intermediate-mass G giants}},
- volume = {444},
- year = {2005}
 }
 
 @article{2006AJ....131.1163S,
@@ -153,21 +118,6 @@ archivePrefix = {arXiv},
  title = {{CIAO: Chandra's data analysis system}},
  volume = {6270},
  year = {2006}
-}
-
-@article{Gondoin+2007,
- adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2007A&A...464.1101G},
- author = {{Gondoin}, P.},
- doi = {10.1051/0004-6361:20066751},
- journal = {\aap},
- keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars},
- month = {March},
- number = {3},
- pages = {1101-1106},
- title = {{The rotation-activity correlation among G and K giants in binary systems}},
- volume = {464},
- year = {2007}
 }
 
 @article{2007A&A...466.1111G,
@@ -384,6 +334,24 @@ archivePrefix = {arXiv},
  year = {2016}
 }
 
+@article{2016MNRAS.461.2527P,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.461.2527P},
+ archiveprefix = {arXiv},
+ author = {{Pejcha}, Ond{\v{r}}ej and {Metzger}, Brian D. and {Tomida}, Kengo},
+ doi = {10.1093/mnras/stw1481},
+ eprint = {1604.07414},
+ journal = {\mnras},
+ keywords = {binaries: close, binaries: general, stars: evolution, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+ month = {September},
+ number = {3},
+ pages = {2527-2539},
+ primaryclass = {astro-ph.SR},
+ title = {{Binary stellar mergers with marginally bound ejecta: excretion discs, inflated envelopes, outflows, and their luminous transients}},
+ volume = {461},
+ year = {2016}
+}
+
 @article{2018A&A...615A.124U,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2018A&A...615A.124U},
@@ -493,6 +461,22 @@ archivePrefix = {arXiv},
  year = {2020}
 }
 
+@article{2021arXiv210811234S,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210811234S},
+ archiveprefix = {arXiv},
+ author = {{Suzuki}, Hiromasa and {Plucinsky}, Paul P. and {Gaetz}, Terrance J. and {Bamba}, Aya},
+ eid = {arXiv:2108.11234},
+ eprint = {2108.11234},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {August},
+ pages = {arXiv:2108.11234},
+ primaryclass = {astro-ph.HE},
+ title = {{Spatial and Temporal Variations of the Chandra ACIS Particle-Induced Background and Development of a Spectral-Model Generation Tool}},
+ year = {2021}
+}
+
 @article{Bond+2003,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2003Natur.422..405B},
@@ -584,6 +568,36 @@ Todd},
  title = {{B fields in OB stars (BOB): Low-resolution FORS2 spectropolarimetry of the first sample of 50 massive stars}},
  volume = {582},
  year = {2015}
+}
+
+@article{Gondoin+2005,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2005A&A...444..531G},
+ author = {{Gondoin}, P.},
+ doi = {10.1051/0004-6361:20053567},
+ journal = {\aap},
+ keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars, stars: magnetic fields},
+ month = {December},
+ number = {2},
+ pages = {531-538},
+ title = {{The relation between X-ray activity and rotation in intermediate-mass G giants}},
+ volume = {444},
+ year = {2005}
+}
+
+@article{Gondoin+2007,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2007A&A...464.1101G},
+ author = {{Gondoin}, P.},
+ doi = {10.1051/0004-6361:20066751},
+ journal = {\aap},
+ keywords = {stars: activity, stars: coronae, stars: evolution, stars: late-type, X-rays: stars},
+ month = {March},
+ number = {3},
+ pages = {1101-1106},
+ title = {{The rotation-activity correlation among G and K giants in binary systems}},
+ volume = {464},
+ year = {2007}
 }
 
 @article{Grunhut+2017,
@@ -840,7 +854,7 @@ Todd},
  year = {2011}
 }
 
-@article{Zuckerman+2008,
+@article{Zuckerman_2008,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...683.1085Z},
  archiveprefix = {arXiv},
