Updates from Overleaf

--- a/bib.bib
+++ b/bib.bib
@@ -207,6 +207,41 @@
  volume = {719},
  year = {2010}
 }
+@ARTICLE{Gunn1998,
+       author = {{Gunn}, A.~G. and {Mitrou}, C.~K. and {Doyle}, J.~G.},
+        title = "{On the rotation-activity correlation for active binary stars}",
+      journal = {\mnras},
+     keywords = {STARS: ACTIVITY, BINARIES: CLOSE, STARS: FLARE, STARS: LATE-TYPE, STARS: VARIABLES: OTHER},
+         year = 1998,
+        month = may,
+       volume = {296},
+       number = {1},
+        pages = {150-164},
+          doi = {10.1046/j.1365-8711.1998.01347.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998MNRAS.296..150G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Melis_2009,
+       author = {{Melis}, C. and {Zuckerman}, B. and {Song}, Inseok and {Rhee}, Joseph H. and {Metchev}, Stanimir},
+        title = "{A Substantial Dust Disk Surrounding an Actively Accreting First-Ascent Giant Star}",
+      journal = {\apj},
+     keywords = {binaries: close, circumstellar matter, infrared: stars, stars: evolution, stars: individual: TYC 4144 329 1 TYC 4144 329 2, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2009,
+        month = may,
+       volume = {696},
+       number = {2},
+        pages = {1964-1971},
+          doi = {10.1088/0004-637X/696/2/1964},
+archivePrefix = {arXiv},
+       eprint = {0901.4360},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...696.1964M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @article{2010ApJ...721.1820M,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -870,5 +905,37 @@ Todd},
  title = {{Gas and Dust Associated with the Strange, Isolated Star BP Piscium}},
  volume = {683},
  year = {2008}
+}
+
+@ARTICLE{Feinstein2019,
+       author = {{Feinstein}, Adina D. and {Montet}, Benjamin T. and {Foreman-Mackey}, Daniel and {Bedell}, Megan E. and {Saunders}, Nicholas and {Bean}, Jacob L. and {Christiansen}, Jessie L. and {Hedges}, Christina and {Luger}, Rodrigo and {Scolnic}, Daniel and {Cardoso}, Jos{\'e} Vin{\'\i}cius de Miranda},
+        title = "{eleanor: An Open-source Tool for Extracting Light Curves from the TESS Full-frame Images}",
+      journal = {\pasp},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = sep,
+       volume = {131},
+       number = {1003},
+        pages = {094502},
+          doi = {10.1088/1538-3873/ab291c},
+archivePrefix = {arXiv},
+       eprint = {1903.09152},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PASP..131i4502F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@MISC{Brasseur2019,
+       author = {{Brasseur}, C.~E. and {Phillip}, Carlita and {Fleming}, Scott W. and {Mullally}, S.~E. and {White}, Richard L.},
+        title = "{Astrocut: Tools for creating cutouts of TESS images}",
+     keywords = {Software},
+         year = 2019,
+        month = may,
+          eid = {ascl:1905.007},
+        pages = {ascl:1905.007},
+archivePrefix = {ascl},
+       eprint = {1905.007},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ascl.soft05007B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
